--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dayjs": "^1.11.9",
     "email-validator": "^2.0.4",
     "moment": "^2.29.4",
+    "mui-image": "^1.0.7",
     "react": "^18.2.0",
     "react-big-calendar": "^1.8.2",
     "react-dom": "^18.2.0",
@@ -26,6 +27,7 @@
     "rollup-plugin-visualizer": "^5.9.2"
   },
   "devDependencies": {
+    "@types/mui-image": "^1.0.1",
     "@types/react": "^18.2.15",
     "@types/react-big-calendar": "^1.6.4",
     "@types/react-dom": "^18.2.7",
